--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.2', '7.4']
+        php-versions: ['7.4']
     steps:
       - uses: actions/checkout@v3
       - name: Setup PHP
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.2', '7.4']
+        php-versions: ['7.4']
     steps:
       - uses: actions/checkout@v3
       - name: Setup PHP
