--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,4 @@
 {
-  "config": {
-    "platform": {
-      "php": "8.2"
-    }
-  },
   "autoload": {
     "psr-4": {
       "GovukComponents\\": "app/"
@@ -19,6 +14,7 @@
     "dxw/php-cs-fixer-config": "^2.1.1"
   },
   "require": {
+    "php": "^7.4|^8.2",
     "dxw/iguana": "^1.3.2"
   }
 }
