--- a/app/Blocks2025/Details/package.json
+++ b/app/Blocks2025/Details/package.json
@@ -4,7 +4,13 @@
   "description": "Details block with GOV.UK markup",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "wp-scripts build",
+		"format": "wp-scripts format",
+		"lint:css": "wp-scripts lint-style",
+		"lint:js": "wp-scripts lint-js",
+		"packages-update": "wp-scripts packages-update",
+		"plugin-zip": "wp-scripts plugin-zip",
+		"start": "wp-scripts start"
   },
   "author": "dxw",
   "license": "ISC",
