--- a/app/Blocks/Details/package.json
+++ b/app/Blocks/Details/package.json
@@ -5,16 +5,19 @@
   "main": "build/index.js",
   "scripts": {
     "build": "wp-scripts build",
-		"format": "wp-scripts format",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
-		"packages-update": "wp-scripts packages-update",
-		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+    "format": "wp-scripts format",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "start": "wp-scripts start"
   },
   "author": "dxw",
   "license": "ISC",
   "devDependencies": {
     "@wordpress/scripts": "^30.19.0"
+  },
+  "dependencies": {
+    "@wordpress/components": "^29.12.0"
   }
 }
